<resources>
    <string name="app_name">AlarmMe When I\'m There</string>
    <string name="explore">Explore</string>
    <string name="alarms">Alarm</string>
    <string name="favorites">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="where_to">Where to?</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="hint_message">Alarm Message</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="city">City: </string>
    <string name="radius">Radius: </string>
    <string name="default_radius">600m</string>
    <string name="remove_check_point">Remove alarm?</string>
    <string name="confirm_remove_checkpoint">This will permanently delete the reminder alarm
        .</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofence_added">Geofence added</string>

    <string name="geofence_removed">Geofence removed</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="error_permission_rationale">Location permission is needed for core functionality</string>
    <string name="error_permission_denied_explanation">Permission was denied, but is needed for core
		functionality.</string>
    <string name="error_location_settings_inadequate">Location settings are inadequate,
		and cannot be fixed here. Fix in Settings</string>
    <string name="error_no_geocoder_available" translatable="false">No geocoder available</string>
    <string name="error_no_address_found">Sorry, no address found</string>
    <string name="error_no_receiver_received">No receiver received. There is nowhere to send the results</string>
    <string name="error_no_location_data_provided">No location data provided</string>
    <string name="error_service_not_available">Sorry, the service is not available</string>
    <string name="error_invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="error_name_length">The message should have have a minimum of 4 characters</string>

    <string name="error_geofence_not_available">Geofence service is not available now</string>
    <string name="error_geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="error_geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="error_unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="error_geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="error_location_name_validation_msg">Location name should have a minimum of 4
        characters</string>
    <string name="error_message_validation_msg">Alarm message should have a minimum of 3
        characters</string>
    <string name="error_field_required">This field is required</string>

    <string name="msg_already_near_location">You are already close to the specified location</string>
    <string name="hint_location_name">Location Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_point_weather_description">Weather</string>
    <string name="weather_condition_image_desc">A graphical representation of the weather conditions</string>
    <string name="detail">Detail</string>
    <string name="active">Active</string>
    <string name="not_active">Not active</string>
    <string name="temp">%.0f°</string>
    <string name="max_temp">High: %.0f°</string>
    <string name="min_temp">Low: %.0f°</string>
    <string name="day_weather_description">%1$s: %2$s</string>
    <string name="humidity">Humidity: %1$.0f%2$s</string>
    <string name="pressure">Pressure: %.0f hPa</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>

</resources>
