<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
            android:id="@+id/add_alarm_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/add_alarm"
            android:layout_marginTop="@dimen/spacing_small"
            android:textAppearance="?android:textAppearanceMedium"
            />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                />

    </com.google.android.material.textfield.TextInputLayout>

   <GridLayout
           android:id="@+id/detail_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:columnCount="3"
           android:padding="@dimen/spacing_normal"
           >

       <TextView
               android:id="@+id/city_label"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="@dimen/spacing_tiny"
               android:text="@string/city"
               android:textColor="?attr/colorAccent"
               android:layout_marginTop="@dimen/spacing_tiny"
               android:layout_row="0"
               android:layout_column="0"
               android:layout_gravity="center_horizontal|start"
               />

       <TextView
               android:id="@+id/city_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_row="0"
               android:layout_column="1"
               android:layout_columnSpan="2"
               android:layout_gravity="fill_horizontal"
               android:layout_marginTop="@dimen/spacing_tiny"
               android:layout_columnWeight="1"
               tools:text="Montreal"
               />

       <TextView
               android:id="@+id/radius_label"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="@dimen/spacing_tiny"
               android:text="@string/radius"
               android:textColor="?attr/colorAccent"
               android:layout_row="1"
               android:layout_column="0"
               android:layout_marginTop="@dimen/spacing_tiny"
               android:layout_gravity="center|start"
               />

       <SeekBar
               android:id="@+id/radius_sb"
               android:layout_width="0dp"
               android:layout_height="30dp"
               android:layout_marginEnd="@dimen/spacing_tiny"
               android:paddingStart="@dimen/spacing_small"
               android:paddingEnd="@dimen/spacing_small"
               style="@style/Widget.AppCompat.SeekBar.Discrete"
               android:max="4"
               android:progress="2"
               android:layout_row="1"
               android:layout_column="1"
               android:layout_gravity="fill_horizontal"
               android:layout_marginTop="@dimen/spacing_tiny"
               android:layout_columnWeight="1"
               />

       <TextView
               android:id="@+id/radius_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/default_radius"
               android:textColor="?attr/colorAccent"
               android:layout_row="1"
               android:layout_column="2"
               android:layout_marginTop="@dimen/spacing_tiny"
               android:layout_gravity="center|start"
               />
   </GridLayout>
</LinearLayout>